--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
   </head>
   <body>
     <h1>a Factory of People</h1>
-    
+
     <section>
-      <div>
-        <form>
+      <div class="special">
+        <form id="personForm">
           <p>
             <label for="personName">Name</label>
             <input type="text" name="personName">
+          </p>
+
+          <p>
+            <button type="submit">Go</button>
           </p>
         </form>
       </div>
     </section>
 
+    <script src="index.js"></script>
   </body>
 </html>
