--- a/index.html
+++ b/index.html
@@ -10,5 +10,15 @@
   <body>
     <h1>a Factory of People</h1>
 
+    <section>
+      <div>
+        <form>
+          <p>
+            <label for="personName">Name</label>
+            <input type="text" name="personName">
+          </p>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
