Update heading with text box value

--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
 
     <section>
       <div>
-        <form>
+        <form id="personForm">
           <p>
             <label for="personName">Name</label>
             <input type="text" name="personName">
           </p>
+          <p>
+            <button type="submit">Go</button>
+          </p>
         </form>
       </div>
     </section>
+
+    <script src="index.js"></script>
   </body>
 </html>
