--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
           </p>
         </form>
       </div>
+
+      <div id="details"></div>
     </section>
 
     <script src="index.js"></script>
