Add name to details

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
           </p>
         </form>
       </div>
+
+      <div id="details"></div>
     </section>
 
     <script src="index.js"></script>
