--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
             <label for="personName">Name</label>
             <input type="text" name="personName">
           </p>
+
+          <p>
+            <label for="favoriteColor">Favorite Color</label>
+            <input type="color" name="favoriteColor">
+          </p>
+
+          <p>
+            <label for="age">Age</label>
+            <input type="number" name="age">
+          </p>
+
           <p>
             <button type="submit">Go</button>
           </p>
